--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>frontend</title>
+    <title>Shakal A/S Webshop</title>
   </head>
   <body>
     <div id="app"></div>
